fix todo stylling

--- a/frontend/react/src/components/Todo/completed-task/CompletedTask.scss
+++ b/frontend/react/src/components/Todo/completed-task/CompletedTask.scss
@@ -94,7 +94,7 @@
         display: block;
     }
 
-    .todo-item .content {
+    .todo-item .title {
         padding: 15px 10px;
         flex: 1;
         font-size: 1.2em;
