--- a/frontend/react/src/pages/aqi/Aqi.scss
+++ b/frontend/react/src/pages/aqi/Aqi.scss
@@ -1,4 +1,6 @@
 .__AQI {
+
+    // Gauge
     .gauge-container>.gauge>.dial {
         stroke: #334455;
         stroke-width: 5;
@@ -14,5 +16,131 @@
         font-family: 'heebo';
         font-weight: 500;
         font-size: 0.6em;
+    }
+
+    // Slider
+    $slider-width-number: 250;
+    $slider-width: #{$slider-width-number}px;
+    $slider-height: 12px;
+    $slider-border-width: 1px !default;
+    $slider-border-color: #d5d5d5 !default;
+    $background-slider: #f6f6f6; // right
+    $background-filled-slider: linear-gradient(to right, green , yellow,red); //left
+    $thumb-width: 28px;
+    $thumb-height: 28px;
+    $thumb-radius: 50%;
+    $thumb-background: #20924c; // thumb
+    $thumb-border: 1px solid #777; // thumb
+    $shadow-size: -8px;
+    $fit-thumb-in-slider: -8px;
+
+    @function makelongshadow($color, $size) {
+        $val: 5px 0 0 $size $color;
+
+        @for $i from 6 through $slider-width-number {
+            $val: #{$val},
+            #{$i}px 0 0 $size #{$color};
+        }
+
+        @return $val;
+    }
+
+    .__Range {
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+
+        input {
+            appearance: none;
+            background: none;
+            cursor: pointer;
+            display: inline-block;
+            height: 100%;
+            min-height: 50px;
+            overflow: hidden;
+            width: $slider-width;
+
+            &:focus {
+                box-shadow: none;
+                outline: none;
+            }
+
+            &::-webkit-slider-runnable-track {
+                background: $background-filled-slider;
+                content: '';
+                height: $slider-height;
+                pointer-events: none;
+                border: $slider-border-width solid $slider-border-color;
+                border-radius: 10px;
+            }
+
+            &::-webkit-slider-thumb {
+                width: $thumb-width;
+                height: $thumb-height;
+                appearance: none;
+                background: $thumb-background;
+                border-radius: $thumb-radius;
+                box-shadow: makelongshadow($background-slider, $shadow-size);
+                margin-top: $fit-thumb-in-slider;
+                border: $thumb-border;
+            }
+
+
+            &::-moz-range-track {
+                width: $slider-width;
+                height: $slider-height;
+            }
+
+            &::-moz-range-thumb {
+                width: $thumb-width;
+                height: $thumb-height;
+                background: $thumb-background;
+                border-radius: $thumb-radius;
+                border: $thumb-border;
+                position: relative;
+            }
+
+            &::-moz-range-progress {
+                height: $slider-height;
+                background: $background-filled-slider;
+                border: 0;
+                margin-top: 0;
+            }
+
+            &::-ms-track {
+                background: transparent;
+                border: 0;
+                border-color: transparent;
+                border-radius: 0;
+                border-width: 0;
+                color: transparent;
+                height: $slider-height;
+                margin-top: 10px;
+                width: $slider-width;
+            }
+
+            &::-ms-thumb {
+                width: $thumb-width;
+                height: $thumb-height;
+                background: $thumb-background;
+                border-radius: $thumb-radius;
+                border: $thumb-border;
+            }
+
+            &::-ms-fill-lower {
+                background: $background-filled-slider;
+                border-radius: 0;
+            }
+
+            &::-ms-fill-upper {
+                background: $background-slider;
+                border-radius: 0;
+            }
+
+            &::-ms-tooltip {
+                display: none;
+            }
+        }
     }
 }
