--- a/frontend/react/src/pages/weather/Weather.scss
+++ b/frontend/react/src/pages/weather/Weather.scss
@@ -154,7 +154,7 @@
         /*-- //main --*/
         .w3_agile_main_grids {
             // margin: 0 auto;
-            background: url(../../assets/images/weather/india.jpg) no-repeat 0px 0px;
+            background: url(../../assets/images/1.jpg) no-repeat 0px 0px;
             background-size: cover;
             background-repeat: round;
             -webkit-background-size: cover;
