--- a/frontend/react/src/pages/aqi/Aqi.scss
+++ b/frontend/react/src/pages/aqi/Aqi.scss
@@ -40,7 +40,7 @@
     }
 
     .gauge-container>.gauge>.value-text {
-        fill: #bcdf5b;
+        fill: #4c7486;
         font-family: 'heebo';
         font-weight: 500;
         font-size: 0.6em;
