--- a/frontend/react/src/pages/analytics/Analytics.scss
+++ b/frontend/react/src/pages/analytics/Analytics.scss
@@ -5,4 +5,11 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 
+    .datePicker {
+        width: 100%;
+        padding: 8px 12px;
+        border: none;
+        border-bottom: 1px #ccc solid;
+    }
+
 }
