--- a/frontend/react/src/pages/analytics/Analytics.scss
+++ b/frontend/react/src/pages/analytics/Analytics.scss
@@ -5,11 +5,16 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 
-    .datePicker {
+    .datePicker, .selectSort {
         width: 100%;
         padding: 8px 12px;
         border: none;
         border-bottom: 1px #ccc solid;
     }
+
+    .selectSort {
+        padding: 10px 12px;
+    }
+
 
 }
